# disjecta.github.io

./: .gitignore  .gitlab-ci.yml  README.md  build.sh  builds.py  index.html  manage.py  pyproject.toml  requirements.txt  status
.github/: dependabot.yml
.github/workflows/: gh-pages.yml
aaa/: context_processors.py  urls_root.py  wsgi.py
aaa/apps/blog/: apps.py  urls.py  views.py
aaa/data/: rels.sqlite3
aaa/settings/: base.py  dev.py  prod.py
aaa/settings/inc/: installed_apps_dev.py  installed_apps_prod.py  middleware.py  middleware_prod.py
apps/blog/: views.py
apps/blog/templates/: base.html  status.html
apps/foundation/: apps.py  urls.py
blog/post/: another-test-post.html  post-all-tags.html  test-post.html
blog/tag/: a-tag.html  another-tag.html  distill.html  example.html
config/: context_processors.py  urls_root.py
config/context_processors/: dependency_reporting.py  os_detection.py  settings_injection.py  timestamp_creation.py
config/settings/: base.py  dev.py  prod.py
config/settings/inc/: installed_apps_dev.py  installed_apps_prod.py
data/: rels.sqlite3
post/: another-test-post.html  ghp-src-branch-test.html  post-all-tags.html  test-post.html
project_root/: manage.py
project_root/apps/a0_foundation/: apps.py
project_root/apps/blog/: urls.py
project_root/apps/blog_original_snapshot/: apps.py
project_root/config/: wsgi.py
project_root/config/settings/: base.py  dev.py
requirements/: requirements.txt
status/: index.html
tag/: a-tag.html  another-tag.html  distill.html  example.html
(+10 files in other folders)
